<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<!--        <variable-->
<!--            name="viewModel"-->
<!--            type="com.example.sunflower_copy.detail.DetailViewModel" />-->
        <variable
            name="viewModel"
            type="com.example.sunflower_copy.ui.main.PageViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:navigationIcon="@drawable/ic_back_circle"
            style="@style/Widget.Sunflower.Toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DetailFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/fab_bottom_padding">

                <ImageView
                    android:id="@+id/main_photo_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/plant_detail_image_height"
                    android:contentDescription="@string/plant_detail_image_content_description"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_normal"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding_extra_small"
                        android:textColor="@color/sunflower_black"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                        tools:text="Plant Name" />

                    <TextView
                        android:id="@+id/plant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:padding="@dimen/text_padding_extra_small"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:textStyle="italic"
                        tools:text="Latin Name" />

                    <TextView
                        android:id="@+id/plant_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding_extra_small"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:text="Description of plant." />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_plant_fab"
            style="@style/Widget.Sunflower.FloatingActionButton"
            android:layout_gravity="bottom|end"
            android:backgroundTint="?attr/colorPrimaryVariant"
            app:srcCompat="@android:drawable/ic_input_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>