<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_add_plant_message"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_positive"
            android:text="@string/label_yes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_message"
            style="@style/Widget.Sunflower.Button.Dialog.Positive" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_negative"
            android:text="@string/label_no"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_positive"
            app:layout_constraintTop_toBottomOf="@+id/dialog_message"
            style="@style/Widget.Sunflower.Button.Dialog.Negative" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>